# qrustyquake

./: .gitignore  CMakeLists.txt
emscripten/: index.html
misc/: qrustyquake.desktop.in
src/: CMakeLists.txt  Makefile  cd_sdl.c  cl_parse.c  defines.h  in_sdl.c  keys.c  keys.h  menu.c  net_bsd.c  quakedef.h  r_shared.h  vid.h  vid_sdl.c
